--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </h3>
 
 <p>
-This is IFNL-GLUE: a GLUE project for the interferon lambda. 
+This is IFNL-GLUE: a GLUE project for interferon lambda. 
 </p>
 
 <p>
@@ -86,9 +86,7 @@ GLUE> run file ifnl.glue
 
 <p>Josh Singer (<a href="mailto:josh.singer@glasgow.ac.uk">josh.singer@glasgow.ac.uk</a>)</p>
 
-<p>William de Souza</p>
-
-<p>Daniel Streicker</p>
+<p>Connor G. Bamford</p>
 
 
 <h3>
