--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 </h3>
 
 <p>
-This is IFNL-GLUE: a GLUE project for interferon lambda. 
+This is IFNL-GLUE: a GLUE project for interferon lambda.
+This project is one of several generated as part of the 
+<a target="_blank" href="https://giffordlabcvr.github.io/Virus-Host-Genomics/">Virus-Host Genomics</a>
+program at the
+<a target="_blank" href="https://www.gla.ac.uk/researchinstitutes/iii/cvr/">University of Glasgow-MRC Centre for Virus Research</a>.
 </p>
 
 <p>
@@ -45,7 +49,6 @@ This GLUE project contains reference information for interferon lambda (IFNL), i
 
 <ol>
 <li>A set of <a href="https://github.com/giffordlabcvr/IFNL-GLUE/blob/master/tabular/flavi-ncbi-refseqs-side-data.tsv">IFNL reference sequences</a> linked to <a href="https://github.com/giffordlabcvr/IFNL-GLUE/blob/master/tabular/flavi-ncbi-refseqs-side-data.tsv">auxiliary data</a>.</li>
-<li>A comprehensive list of <a href="https://github.com/giffordlabcvr/IFNL-GLUE/blob/master/glue/ifnlFeatures.glue">IFNL genome features</a> and their <a href="https://github.com/giffordlabcvr/IFNL-GLUE/blob/master/tabular/flavi-reference_feature_locations.tsv">locations</a> within flavivirus reference sequences.</li>
 <li><a href="https://github.com/giffordlabcvr/IFNL-GLUE/tree/master/alignments">Alignments</a> of IFNL reference sequences arranged hierarchically by clade.</li>
 </ol>
 
