Created link to data

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ specialised for developing virus genome data resources (VGDR).
 This GLUE project contains reference information for interferon lambda (IFNL), including:
 
 <ol>
-<li>A set of <a href="https://github.com/giffordlabcvr/IFNL-GLUE/blob/master/tabular/flavi-ncbi-refseqs-side-data.tsv">IFNL reference sequences</a> linked to <a href="https://github.com/giffordlabcvr/IFNL-GLUE/blob/master/tabular/flavi-ncbi-refseqs-side-data.tsv">auxiliary data</a>.</li>
+<li>A set of <a href="https://github.com/giffordlabcvr/IFNL-GLUE/blob/master/tabular/ifnl-data.tsv">IFNL reference sequences</a> linked to auxiliary data.</li>
 <li><a href="https://github.com/giffordlabcvr/IFNL-GLUE/tree/master/alignments">Alignments</a> of IFNL reference sequences arranged hierarchically by clade.</li>
 </ol>
 
