--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		 Access to this GitHub repository is currently restricted. To request access please contact:
 
 		 <p>Robert J. Gifford (<a href="mailto:robert.gifford@glasgow.ac.uk">robert.gifford@glasgow.ac.uk</a>)</p>
-		 <p>Connor Bamford (<a href="mailto:connor.bamford@glasgow.ac.uk">connor.bamford@glasgow.ac.uk</a>)</p>
+		 <p>Connor Bamford (<a href="mailto:connor.bamford@glasgow.ac.uk">c.bamford@qub.ac.uk</a>)</p>
 
 		 
 	   </p>
