Fixed typo and cleaned up

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 		 disclosing similarity to IFNL proteins. These
 		 <a href="https://github.com/giffordlabcvr/IFNL-Evolution/tree/master/sources/fasta-curated">FASTA sequences</a>
 		 have been curated via systematic screening of whole genome sequence (WGS) assemblies using the 
-		 <a target="_blank" href="https://giffordlabcvr.github.io/DIGS-tool/">DIGS tool</a>.
-		 Sequences in this source have unique IDs based on arbitrary numbering. 
+		 <a target="_blank" href="https://giffordlabcvr.github.io/DIGS-tool/"><b>DIGS tool</b></a>.
+		 Sequences in this source have been given unique IDs based on arbitrary numbering. 
 	   </p>
 	      	   
 
@@ -99,7 +99,7 @@
 		 
 		 <ol>
 		   <li><a href="https://github.com/giffordlabcvr/IFNL-Evolution/blob/master/tabular/ifnl-side-data.tsv">Sequence-associated metadata</a> for the reference mRNA sequences in <b>ncbi-refseqs</b>.</li> 
-		   <li>Locus data for the EVE sequences in <b>fasta-curated</b>.</li> 
+		   <li>Locus data for the sequences in the <b>fasta-curated</b> source</li> 
 		 </ol>
 		 
 	   </p>
