Fixed typos etc

--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
 	  <p>
 		This <a target="_blank" href="https://github.com/">GitHub</a> repository contains
 		data and program logic supporting comparative and phylogenetic investigations of
-		<b>interferon lambda</b>, an inflammatory
-		<a target="_blank" href="https://en.wikipedia.org/wiki/Cytokine">cytokine</a> 
-		(<a target="_blank" href="https://pfam.xfam.org/family/IL28A"><b>IFNL</b></a>) evolution. 
+		<b>interferon lambda</b> (<a target="_blank" href="https://pfam.xfam.org/family/IL28A"><b>IFNL</b></a>),
+	    an inflammatory <a target="_blank" href="https://en.wikipedia.org/wiki/Cytokine">cytokine</a>. 
 	  </p>
 
 
