Minor edits fixes

--- a/index.html
+++ b/index.html
@@ -79,10 +79,8 @@
 	   </p>
 	   
 	   <p>
-		 <b>fasta-curated</b>: A non-redundant set of 
-		 <a href="https://github.com/giffordlabcvr/IFNL-Evolution/blob/master/tabular/efv-side-data.tsv">loci</a>
-		 disclosing similarity to IFNL proteins. These
-		 <a href="https://github.com/giffordlabcvr/IFNL-Evolution/tree/master/sources/fasta-curated">FASTA sequences</a>
+		 <b>fasta-curated</b>: A non-redundant set of loci disclosing similarity to IFNL proteins.
+		 These <a href="https://github.com/giffordlabcvr/IFNL-Evolution/tree/master/sources/fasta-curated">FASTA sequences</a>
 		 have been curated via systematic screening of whole genome sequence (WGS) assemblies using the 
 		 <a target="_blank" href="https://giffordlabcvr.github.io/DIGS-tool/"><b>DIGS tool</b></a>.
 		 Sequences in this source have been given unique IDs based on arbitrary numbering. 
