Updated alignments section

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 		 Several distinct categories of MSA are included in this project, each representing a distinct taxonomic level.
 		
 		 <ol>
-		   <li><b>Tip</b>: Alignments of IFNL alleles from a single species (mRNAs)</li> 
-		   <li><b>Internal</b>: <a href="https://github.com/giffordlabcvr/IFNL-Evolution/tree/master/alignments/internal">IFNL genes</a> (mRNAs) and IFNL gene loci</a> (genomic DNA)</li> 
-		   <li><b>Root</b>: <a href="https://github.com/giffordlabcvr/IFNL-Evolution/tree/master/alignments/root">MSAs capturing homology between distint IFNL genes</a></li> 
+		   <li><b>Tip</b> MSAs: Alignments of IFNL alleles from a single species (mRNAs)</li> 
+		   <li><a href="https://github.com/giffordlabcvr/IFNL-Evolution/tree/master/alignments/internal"><b>Internal</b></a> MSAs: IFNL genes (mRNAs) and IFNL gene loci (genomic DNA)</li> 
+		   <li><a href="https://github.com/giffordlabcvr/IFNL-Evolution/tree/master/alignments/root"><b>Root</b></a> MSA capturing homology between distint IFNL genes</li> 
 		 </ol>
 	   </p>
 
