--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		 <ol>
 		   <li><b>Tip</b> MSAs: Alignments of IFNL alleles from a single species (mRNAs)</li> 
 		   <li><a href="https://github.com/giffordlabcvr/IFNL-Evolution/tree/master/alignments/internal"><b>Internal</b></a> MSAs: IFNL genes (mRNAs) and IFNL gene loci (genomic DNA)</li> 
-		   <li><a href="https://github.com/giffordlabcvr/IFNL-Evolution/tree/master/alignments/root"><b>Root</b></a> MSA capturing homology between distint IFNL genes</li> 
+		   <li><a href="https://github.com/giffordlabcvr/IFNL-Evolution/tree/master/alignments/root"><b>Root</b></a> MSA capturing homology between distinct IFNL genes</li> 
 		 </ol>
 	   </p>
 
