Updated GLUE URL

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       	   
 	   <p>
 	
-         On computers with <a href="http://tools.glue.cvr.ac.uk/#/installation">GLUE installed</a>,
+         On computers with <a href="http://glue-tools.cvr.gla.ac.uk/#/installation">GLUE installed</a>,
          the <b>IFNL-Evolution</b> project can be instantiated by navigating to the project folder,
          initiating GLUE, and issuing the following command in the GLUE shell:
          
