--- a/index.html
+++ b/index.html
@@ -3,17 +3,6 @@
   <head>
 
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127397242-1"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-	  gtag('config', 'UA-127397242-1');
-	</script>
-
-
     <meta charset="UTF-8">
     <title>IFNL-Evolution by giffordlabcvr</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,8 +19,7 @@
     <section class="page-header">
       <h1 class="project-name">IFNL-Evolution</h1>
       <h2 class="project-tagline">Comparative evolutionary analysis of IFNL genes</h2>
-      <a href="https://github.com/giffordlabcvr/IFNL-Evolution/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/giffordlabcvr/IFNL-Evolution/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/giffordlabcvr/IFNL-Evolution/zipball/master" class="btn">Download</a>
       <a href="https://github.com/giffordlabcvr/IFNL-Evolution" class="btn">View on GitHub</a>
     </section>
 
