--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
     <section class="main-content">
 
 
+	  <p>
+	    Access to this GitHub repository is currently restricted. To request access please contact:
+      </p>
+
+
+	  <p>
+        <a href="https://giffordlabcvr.github.io/virus-evolution/index.html" target="_blank">Robert J. Gifford</a> (<a href="mailto:robert.gifford@glasgow.ac.uk">robert.gifford@glasgow.ac.uk</a>)        
+      </p>
+
+
 	  <h3>
 		<a id="ifnl-glue" class="anchor" href="#ifnl-glue" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>Description</strong>
 	  </h3>
@@ -129,16 +139,19 @@
 	   <h3>
 		 <a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>Contributors</strong>
 	   </h3>
+
 	   
-	   <p>
 
-		 Access to this GitHub repository is currently restricted. To request access please contact:
 
+		 <p><a href="https://giffordlabcvr.github.io/virus-evolution/index.html" target="_blank">Robert J. Gifford</a> (<a href="mailto:robert.gifford@glasgow.ac.uk">robert.gifford@glasgow.ac.uk</a>)</p>
 		 <p>Connor Bamford (<a href="mailto:connor.bamford@glasgow.ac.uk">c.bamford@qub.ac.uk</a>)</p>
-		 <p>Robert J. Gifford (<a href="mailto:robert.gifford@glasgow.ac.uk">robert.gifford@glasgow.ac.uk</a>)</p>
-
 		 
-	   </p>
+
+        <p>
+        <img src="./website/images/ifnl-footer.jpg" alt="Catshark" />
+
+        </p>
+
 
 
 	  <footer class="site-footer">
