--- a/index.html
+++ b/index.html
@@ -252,15 +252,11 @@
 
 
 
-
-
        <br>
 	   <h3>
 		 <a id="Publications" class="anchor" href="#Publications" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>Related Publications</strong>
 	   </h3>
        <hr>
-      	   
-
 
 		  <p>
 		
@@ -313,6 +309,18 @@
 		  <a href="https://retrovirology.biomedcentral.com/articles/10.1186/s12977-018-0442-1" target="_blank">[view]</a> 
 		  <br>
 		  <br>
+  	   
+ 
+		  Krause CD.
+		  <b>(2016)</b>
+		  <br>
+		  Intron loss in interferon genes follows a distinct set of stages, and may confer an evolutionary advantage.
+		  <br>
+		  <i>Cytokine</i>
+		  <a href="https://pubmed.ncbi.nlm.nih.gov/27155818/" target="_blank">[view]</a> 
+		  <br>
+		  <br>
+
 
 		  Katzourakis A. and RJ. Gifford
 		  <b>(2010)</b>
