Web content and other

--- a/index.html
+++ b/index.html
@@ -26,16 +26,10 @@
     <section class="main-content">
 
 
-	  <p>
-	    Access to this GitHub repository is currently restricted. To request access please contact:
-      </p>
-
-
-	  <p>
-        <a href="https://giffordlabcvr.github.io/virus-evolution/index.html" target="_blank">Robert J. Gifford</a> (<a href="mailto:robert.gifford@glasgow.ac.uk">robert.gifford@glasgow.ac.uk</a>)        
-      </p>
-
-
+	   <h3>
+		 <a id="Background" class="anchor" href="#Background" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>Comparative analysis of lambda interferons using GLUE</strong>
+	   </h3>
+	   <hr>
 
 
 	 <h3>
